--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
 
     <!-- Footer -->
     <footer class="footer mt-auto py-3 dark-bg">
-      <p class="m-0 text-center text-white">Made by Code Instituters</p>
+      <p class="m-0 text-center text-white">Django App for learning purposes</p>
       <p class="m-0 text-center text-white">
         Follow us: <i class="fab fa-facebook-square ms-3"></i>
         <i class="fab fa-twitter-square ms-3"></i>
@@ -87,6 +87,7 @@
         <i class="fab fa-youtube-square ms-3"></i>
       </p>
     </footer>
+    <script src="{% static 'js/script.js' %}"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
