Added message to show user state

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,6 @@
 {% url 'account_signup' as signup_url %}
 {% url 'account_logout' as logout_url %}
 
-
 <!DOCTYPE html>
 <html class="h-100" lang="en">
   <head>
@@ -114,7 +113,11 @@
     </nav>
 
     <main class="flex-shrink-0 main-bg">
-      {% block content %}
+      {% if user.is_authenticated %}
+      <p class="text-end m-3">You are logged in as {{ user }}</p>
+      {% else %}
+      <p class="text-end m-3">You are not logged in</p>
+      {% endif %} {% block content %}
       <!-- Content Goes here -->
       {% endblock content %}
     </main>
