Add edit comment button

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -53,6 +53,8 @@
           <div id="comment{{ comment.id }}">{{ comment.body | linebreaks }}</div>
           {% if not comment.approved and comment.author == user %}
           <p class="approval">This comment is awaiting approval</p>
+          {% endif %} {% if user.is_authenticated and comment.author == user %}
+          <button class="btn btn-edit" comment_id="{{ comment.id }}">Edit</button>
           {% endif %}
         </div>
         <!-- Our for loop ends here -->
@@ -77,4 +79,6 @@
   </div>
 </div>
 
-{% endblock content %}
+{% endblock content %} {% block extras %}
+<script src="{% static 'js/comments.js' %}"></script>
+{% endblock %}
